button color change

--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ body {
 	background: url(img/dribbble-icon.png) no-repeat center 0;
 }
 .home .btn {
-	background: #45ac9d;
+	background: #000000;
 	color: #fff;
 	font: bold 1.17em/2.77 'Montserrat', 'OpenSans', Arial, sans-serif;
 	display: inline-block;
