--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ body {
 }
 /* Homepage */
 .home {
-	background: url(img/stones) no-repeat center 0;
+	background: url(img/bat_cave) no-repeat center 0;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
